--- a/part2_ch1/1. data_preperation.ipynb
+++ b/part2_ch1/1. data_preperation.ipynb
@@ -16,10 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# python 3.11\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
